Fix #fade alignment Safari bug

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a:hover {
   text-align: center;
   top: 40%;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   width: 80%;
 }
 
